<resources>
    <string name="app_name">Flash Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_nlet_s_get_started">Welcome!\nLet\'s get started</string>
    <string name="sign_in_with_your_qr_code_nin_the_mobile">Sign in with your QR code\nin the mobile</string>
    <string name="you_re_agreeing_to_our_terms">you\'re agreeing to our Terms</string>
    <string name="to_connect_the_cart_on_your_phone">To connect the cart on your phone:</string>
    <string name="how_to_connect1">1. Open the app on your phone\n2. Tap <b>Menu</b></string>
    <string name="how_to_connect2">&amp; select <b>Link Cart</b></string>
    >
    <string name="how_to_connect3">3. Tab on <b>Link Cart</b></string>
    <string name="how_to_connect4">4. Point your phone to this screen \nto capture the code</string>
    <string name="reload">Reload</string>
    <string name="you_re_all_set">You\'re all set</string>
    <string name="you_re_all_set2">Just return your cart</string>
    <string name="you_re_all_set3">&amp; we\'ll email your receipt</string>
    <string name="view_receipt">View Receipt</string>
    <string name="logout">Logout</string>
    <string name="recommended">Recommended</string>
    <string name="best_seller">Best Seller</string>
    <string name="suggestion">Suggestion</string>
    <string name="ingredient">Ingredient</string>
    <string name="meals">Meals</string>
    <string name="offers">Offers</string>
    <string name="checkout">Checkout</string>
    <string name="confirmation_checkout">Confirmation Checkout</string>
    <string name="body_of_checkout">You sure, that you want to checkout?</string>
    <string name="cancel">Cancel</string>
    <string name="add_item">Add Item</string>
    <string name="add_item_to_cart">Add Item To Cart</string>
    <string name="type_product_code">Type Product Code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_make">Do you want to make %s ?</string>
    <string name="l_e_9_50"><strike>L.E 9.50</strike></string>
</resources>