<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1388dp"
    android:layout_height="768dp"
    android:background="@drawable/connect_cart_background">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/font"
        android:text="@string/to_connect_the_cart_on_your_phone"
        android:textColor="@color/title_blue"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:fontFamily="@font/font"
        android:text="@string/how_to_connect1"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/menu"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-12dp"
        android:fontFamily="@font/font"
        android:text="@string/how_to_connect2"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/how_to_connect3"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/link"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21" />


    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:text="@string/how_to_connect4"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/qr_code_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="115dp"
        android:background="@drawable/qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="350dp"
        android:background="@drawable/reload_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/reload"
        android:textColor="@color/black"
        android:textSize="43sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

</androidx.constraintlayout.widget.ConstraintLayout>