<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="1388dp"
        android:layout_height="wrap_content"
        android:background="@drawable/connect_cart_background">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:fontFamily="@font/font"
            android:text="@string/to_connect_the_cart_on_your_phone"
            android:textColor="@color/title_blue"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:fontFamily="@font/font"
            android:text="@string/how_to_connect1"
            android:textColor="@color/black"
            android:textSize="39sp"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="38dp"
            android:layout_height="35dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/menu"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/font"
            android:text="@string/how_to_connect2"
            android:textColor="@color/black"
            android:textSize="39sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />


        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/how_to_connect3"
            android:textColor="@color/black"
            android:textSize="39sp"
            app:layout_constraintBottom_toTopOf="@+id/textView22"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/link"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="@+id/textView21" />


        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:text="@string/how_to_connect4"
            android:textColor="@color/black"
            android:textSize="39sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="67dp"
            android:background="@drawable/qr_code_background"
            app:layout_constraintBottom_toTopOf="@+id/imageView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="365dp"
            android:layout_height="358dp"
            android:background="@drawable/qr_code"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/reload_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="105dp"
            android:text="@string/reload"
            android:textColor="@color/black"
            android:textSize="43sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>